rename home by index

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ms-auto py-4 py-lg-0">
             <li class="nav-item">
-              <a class="nav-link" href="/Page/home.html">Home</a>
+              <a class="nav-link" href="/Page/index.html">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Projects</a>
@@ -62,7 +62,7 @@
             </li>
           </ul>
         </div>
-        <a href="./contact-us.html" class="notDisplayMobile">Contact Us</a>
+        <a href="./Page/contact-us.html" class="notDisplayMobile">Contact Us</a>
       </div>
     </nav>
 
