CSS mobile sección testimonial

--- a/index.html
+++ b/index.html
@@ -141,11 +141,7 @@
         working with you."
       </h3>
       <article>
-        <img
-          src="../Style/img/testimonial-section/profile.png"
-          alt="Foto carnet de Kristin Watson"
-          class="perfil"
-        />
+        <div class="perfil"></div>
         <div>
           <p class="perfilNombre">Kristin Watson</p>
           <p class="perfilEmpresa">Bookin.com</p>
