--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
     <section class="projects">
       <h2>Recent Projects</h2>
       <article>
-        <img src="../Style/img/projects-section/1.jpg" height: 240px alt="" />
+        <img src="./Style/img/projects-section/1.jpg" alt="" />
         <div>
           <h3>Simplify</h3>
           <h5>UI Design & App Development</h5>
@@ -114,7 +114,7 @@
         </div>
       </article>
       <article>
-        <img src="../Style/img/projects-section/2.jpg" height: 240px alt="" />
+        <img src="./Style/img/projects-section/2.jpg" alt="" />
         <div>
           <h3>Dashcoin</h3>
           <h5>Web Development</h5>
@@ -124,7 +124,7 @@
         </div>
       </article>
       <article>
-        <img src="../Style/img/projects-section/3.jpg" height: 240px alt="" />
+        <img src="./Style/img/projects-section/3.jpg" alt="" />
         <div>
           <h3>Vectorify</h3>
           <h5>User Experience Design</h5>
@@ -149,7 +149,43 @@
       </article>
     </section>
 
-    <section></section>
+    <section class="projects services">
+      <h2>Our Services</h2>
+      <article>
+        <div>
+          <div class="logo logo1"></div>
+          <h3>User Interface Design</h3>
+          <h5>
+            Circle provides you with a stunning user interface design that is
+            accessible to everyone.
+          </h5>
+          <a href="#">Learn More</a>
+        </div>
+      </article>
+      <article>
+        <div>
+          <div class="logo logo2"></div>
+          <h3>User Experience Design</h3>
+          <h5>
+            Circle always focuses on delivering the best user experience to your
+            customers.
+          </h5>
+          <a href="#" rel="noopener noreferrer">Learn More</a>
+        </div>
+      </article>
+      <article>
+        <div>
+          <div class="logo logo3"></div>
+          <h3>Application Development</h3>
+          <h5>
+            We develop high-quality mobile and web applications using the latest
+            technology stack.
+          </h5>
+          <a href="#" rel="noopener noreferrer">Learn More</a>
+        </div>
+      </article>
+    </section>
+
     <section>
       <h2>Do you have any questions?</h2>
       <h4>Let us help you!</h4>
