CSS mobile sección CTA

--- a/index.html
+++ b/index.html
@@ -186,12 +186,12 @@
       </article>
     </section>
 
-    <section>
+    <section class="contact-us">
       <h2>Do you have any questions?</h2>
       <h4>Let us help you!</h4>
       <form action="submit" method="post">
-        <input type="email" />
-        <button type="submit"></button>
+        <input type="email" placeholder="Enter your mail" />
+        <button type="submit">Suscribe</button>
       </form>
     </section>
     <footer>
