CSS tablet nav (heading)

--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
     <!-- tablet, pc... -->
     <link
       rel="stylesheet"
+      media="(min-width: 768px)"
+      href="../Style/styleTablet.css"
+    />
+    <link
+      rel="stylesheet"
       media="(min-width: 991px)"
       href="../Style/stylePC.css"
     />
