CSS tablet hero ans clientes

--- a/index.html
+++ b/index.html
@@ -65,9 +65,12 @@
             <li class="nav-item">
               <a class="nav-link" href="#">Services</a>
             </li>
+            .notDisplayMobileTablet
           </ul>
         </div>
-        <a href="./Page/contact-us.html" class="notDisplayMobile">Contact Us</a>
+        <a href="./Page/contact-us.html" class="notDisplayMobileTablet"
+          >Contact Us</a
+        >
       </div>
     </nav>
 
@@ -84,8 +87,18 @@
       </article>
       <article>
         <img
-          src="../Style/img/hero-section/hero-image.png"
+          src="./Style/img/hero-section/card-1.png"
+          class="notDisplayMobile"
+          alt=""
+        />
+        <img
+          src="./Style/img/hero-section/hero-image.png"
           alt="cliente feliz"
+        />
+        <img
+          src="./Style/img/hero-section/card-2.png"
+          class="notDisplayMobile"
+          alt=""
         />
       </article>
     </section>
@@ -101,7 +114,7 @@
         />
         <img src="../Style/img/logos/fedex-logo.svg" alt="logo Fedex" />
       </article>
-      <article class="notDisplayMobile">
+      <article class="notDisplayMobileTablet">
         <img src="../Style/img/logos/amazon-logo.svg" alt="logo Amazon" />
       </article>
     </section>
