CSS tablet testimonial

--- a/index.html
+++ b/index.html
@@ -167,6 +167,26 @@
           <p class="perfilEmpresa">Bookin.com</p>
         </div>
       </article>
+      <img
+        src="./Style/img/testimonial-section/memoji-1.png"
+        alt=""
+        class="notDisplayMobile"
+      />
+      <img
+        src="./Style/img/testimonial-section/memoji-2.png"
+        alt=""
+        class="notDisplayMobile"
+      />
+      <img
+        src="./Style/img/testimonial-section/memoji-3.png"
+        alt=""
+        class="notDisplayMobile"
+      />
+      <img
+        src="./Style/img/testimonial-section/memoji-4.png"
+        alt=""
+        class="notDisplayMobile"
+      />
     </section>
 
     <section class="projects services">
