CSS tablet services

--- a/index.html
+++ b/index.html
@@ -191,39 +191,41 @@
 
     <section class="projects services">
       <h2>Our Services</h2>
-      <article>
-        <div>
-          <div class="logo logo1"></div>
-          <h3>User Interface Design</h3>
-          <h5>
-            Circle provides you with a stunning user interface design that is
-            accessible to everyone.
-          </h5>
-          <a href="#">Learn More</a>
-        </div>
-      </article>
-      <article>
-        <div>
-          <div class="logo logo2"></div>
-          <h3>User Experience Design</h3>
-          <h5>
-            Circle always focuses on delivering the best user experience to your
-            customers.
-          </h5>
-          <a href="#" rel="noopener noreferrer">Learn More</a>
-        </div>
-      </article>
-      <article>
-        <div>
-          <div class="logo logo3"></div>
-          <h3>Application Development</h3>
-          <h5>
-            We develop high-quality mobile and web applications using the latest
-            technology stack.
-          </h5>
-          <a href="#" rel="noopener noreferrer">Learn More</a>
-        </div>
-      </article>
+      <div>
+        <article>
+          <div>
+            <div class="logo logo1"></div>
+            <h3>User Interface Design</h3>
+            <h5>
+              Circle provides you with a stunning user interface design that is
+              accessible to everyone.
+            </h5>
+            <a href="#">Learn More</a>
+          </div>
+        </article>
+        <article>
+          <div>
+            <div class="logo logo2"></div>
+            <h3>User Experience Design</h3>
+            <h5>
+              Circle always focuses on delivering the best user experience to
+              your customers.
+            </h5>
+            <a href="#" rel="noopener noreferrer">Learn More</a>
+          </div>
+        </article>
+        <article>
+          <div>
+            <div class="logo logo3"></div>
+            <h3>Application Development</h3>
+            <h5>
+              We develop high-quality mobile and web applications using the
+              latest technology stack.
+            </h5>
+            <a href="#" rel="noopener noreferrer">Learn More</a>
+          </div>
+        </article>
+      </div>
     </section>
 
     <section class="contact-us">
