CSS tablet footer

--- a/index.html
+++ b/index.html
@@ -237,8 +237,10 @@
       </form>
     </section>
     <footer>
-      <img src="../Style/img/logos/circle.svg" alt="logo Circle" />
-      <h4>2972 Westheimer Rd. Santa Ana, Illinois 85486</h4>
+      <div>
+        <img src="../Style/img/logos/circle.svg" alt="logo Circle" />
+        <h4>2972 Westheimer Rd. Santa Ana, Illinois 85486</h4>
+      </div>
       <nav class="footer-links">
         <a href="#" class="footer-link">Team</a>
         <a href="#" class="footer-link">Services</a>
