--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     />
     <link
       rel="stylesheet"
-      media="(min-width: 991px)"
+      media="(min-width: 992px)"
       href="../Style/stylePC.css"
     />
 
@@ -54,8 +54,11 @@
           <div class="toogler-icon"></div>
           <div class="toogler-icon"></div>
         </button>
-        <div class="collapse navbar-collapse" id="navbarResponsive">
-          <ul class="navbar-nav ms-auto py-4 py-lg-0">
+        <div
+          class="collapse navbar-collapse justify-content-center"
+          id="navbarResponsive"
+        >
+          <ul class="navbar-nav py-4 py-lg-0">
             <li class="nav-item">
               <a class="nav-link" href="/Page/index.html">Home</a>
             </li>
@@ -65,7 +68,6 @@
             <li class="nav-item">
               <a class="nav-link" href="#">Services</a>
             </li>
-            .notDisplayMobileTablet
           </ul>
         </div>
         <a href="./Page/contact-us.html" class="notDisplayMobileTablet"
