--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         >
           <ul class="navbar-nav py-4 py-lg-0">
             <li class="nav-item">
-              <a class="nav-link" href="/Page/index.html">Home</a>
+              <a class="nav-link" href="./index.html">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Projects</a>
