vincular index.html con project

--- a/index.html
+++ b/index.html
@@ -129,7 +129,10 @@
           <div>
             <h3>Simplify</h3>
             <h5>UI Design & App Development</h5>
-            <a href="http://" target="_blank" rel="noopener noreferrer"
+            <a
+              href="./Page/project.html"
+              target="_blank"
+              rel="noopener noreferrer"
               >Learn More</a
             >
           </div>
@@ -139,7 +142,10 @@
           <div>
             <h3>Dashcoin</h3>
             <h5>Web Development</h5>
-            <a href="http://" target="_blank" rel="noopener noreferrer"
+            <a
+              href="./Page/project.html"
+              target="_blank"
+              rel="noopener noreferrer"
               >Learn More</a
             >
           </div>
@@ -149,7 +155,10 @@
           <div>
             <h3>Vectorify</h3>
             <h5>User Experience Design</h5>
-            <a href="http://" target="_blank" rel="noopener noreferrer"
+            <a
+              href="./Page/project.html"
+              target="_blank"
+              rel="noopener noreferrer"
               >Learn More</a
             >
           </div>
