learn more - cargar en la misma pagina, no abrir ventana nueva

--- a/index.html
+++ b/index.html
@@ -128,10 +128,7 @@
           <div>
             <h3>Simplify</h3>
             <h5>UI Design & App Development</h5>
-            <a
-              href="./Page/project.html"
-              target="_blank"
-              rel="noopener noreferrer"
+            <a href="./Page/project.html" rel="noopener noreferrer"
               >Learn More</a
             >
           </div>
@@ -141,10 +138,7 @@
           <div>
             <h3>Dashcoin</h3>
             <h5>Web Development</h5>
-            <a
-              href="./Page/project.html"
-              target="_blank"
-              rel="noopener noreferrer"
+            <a href="./Page/project.html" rel="noopener noreferrer"
               >Learn More</a
             >
           </div>
@@ -154,10 +148,7 @@
           <div>
             <h3>Vectorify</h3>
             <h5>User Experience Design</h5>
-            <a
-              href="./Page/project.html"
-              target="_blank"
-              rel="noopener noreferrer"
+            <a href="./Page/project.html" rel="noopener noreferrer"
               >Learn More</a
             >
           </div>
